<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="popular_photos_caption">Popular Photos</string>
    <string name="caption_default_text">This is a default caption</string>
    <string name="userName">Username</string>
    <string name="likesCount">Likes</string>
    <string name="userId1">User</string>
    <string name="userComment1">User Comment</string>
    <string name="userId2">User</string>
    <string name="userComment2">User Comment</string>
	<string name="user">Username</string>
	<string name="viewAll">view all %d comments</string>
	<string name="likes">likes</string>
	<string name="createdTime">Time</string>
</resources>
