<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/com.codepath.instagramviewer">

   <com.mikhaellopez.circularimageview.CircularImageView
       android:id="@+id/profilePicture"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="7dp"
       android:layout_marginTop="7dp"
       android:layout_marginLeft="3dp"
       android:adjustViewBounds="true"
       android:scaleType="centerCrop"
       android:src="@drawable/ic_launcher"
       app:border="false"
       app:border_color="#EEEEEE"
       app:border_width="1dp"
       app:shadow="true" />

    <ImageView
        android:id="@+id/imagePhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/profilePicture"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/profilePicture"
        android:text="@string/userName"
        android:textColor="#045FB4"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/likesImg"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/imagePhoto"
        android:paddingTop="5dp"
        android:src="@drawable/love" />
    
     <TextView
        android:id="@+id/lvComment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvCaption"
        android:textSize="12sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="2dp"
        android:layout_toRightOf="@+id/lvUserId1"
        android:text="@string/userComment1" />

    <TextView
        android:id="@+id/lvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/likes"
        android:layout_alignLeft="@id/likes"
        android:textSize="12sp"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingBottom="2dp"
        android:text="@string/caption_default_text" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:text="TextView" />

     <TextView
        android:id="@+id/lvUserId1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvCaption"
        android:layout_alignLeft="@id/likes"
        android:textSize="12sp"
        android:paddingBottom="2dp"
        android:text="@string/userId1"
        android:textColor="#0B0B61" />

    <TextView
        android:id="@+id/lvUserId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/likes"
        android:layout_below="@+id/lvUserId1"
        android:paddingBottom="2dp"
        android:text="@string/userId2"
        android:textColor="#0B0B61"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lvComment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lvUserId2"
        android:layout_alignBottom="@+id/lvUserId2"
        android:layout_toRightOf="@+id/lvUserId2"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="2dp"
        android:text="@string/userComment2"
        android:textSize="12sp" />
    
     <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/likesImg"
        android:layout_toRightOf="@+id/likesImg"
        android:textSize="14sp"
        android:textColor="#0B0B61"
        android:text="@string/likesCount" />

     <ImageView
         android:id="@+id/lvclock"
         android:layout_width="15dp"
         android:layout_height="15dp"
  		 android:layout_toLeftOf="@id/time"
         android:layout_alignBottom="@+id/time"
         android:src="@drawable/clock" />

     <ImageView
         android:id="@+id/lvCommentImg"
         android:layout_width="17dp"
         android:layout_height="17dp"
         android:paddingLeft="5dp"
         android:layout_alignLeft="@+id/likesImg"
         android:layout_alignTop="@+id/lvUserId1"
         android:src="@drawable/comment" />

</RelativeLayout>
